force-app/main/default/objects/genesis__Applications__c/fields/genesis__Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Risk_Assessment__c</fullName>
    <description>This field represents potential risk. Only Applicable for Review Application.</description>
    <inlineHelpText>This field represents potential risk. Only Applicable for Review Application.</inlineHelpText>
    <label>Risk Assessment</label>
    <length>32678</length>
    <type>Html</type>
</CustomField>