force-app/main/default/objects/genesis__Applications__c/fields/genesis__Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>genesis__Sales_Division__c</fullName>
    <description>Sales Division.</description>
    <inlineHelpText>Sales Division.</inlineHelpText>
    <label>Sales Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEALER</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>INDIRECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>