force-app/main/default/objects/genesis__Applications__c/fields/genesis__Schedule_Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>genesis__Schedule_Adjustment_Method__c</fullName>
    <description>This field defines whether the schedule&apos;s due date should get moved before or after, if due date is lying on holiday.</description>
    <inlineHelpText>This field defines whether the schedule&apos;s due date should get moved before or after, if due date is lying on holiday.</inlineHelpText>
    <label>Schedule Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>