force-app/main/default/objects/genesis__Applications__c/fields/genesis__Seasonal_Payment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Seasonal_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the payments for Lease Application include seasonal payments or not.</description>
    <inlineHelpText>This field indicates whether the payments for Lease Application include seasonal payments or not.</inlineHelpText>
    <label>Seasonal Payment</label>
    <type>Checkbox</type>
</CustomField>