force-app/main/default/objects/genesis__Applications__c/fields/genesis__Second_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>genesis__Second_Due_Day__c</fullName>
    <description>Second due day for semi-monthly payment day frequency.</description>
    <label>Second Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>