force-app/main/default/objects/genesis__Applications__c/fields/genesis__Sensitised_Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>genesis__Sensitised_Debt_Service__c</fullName>
    <description>It stores Sensitised Debt Service calculation.</description>
    <formula>IF( ISPICKVAL( genesis__Product_Type__c , &apos;LINE OF CREDIT&apos;) ,( genesis__Credit_Limit__c/ genesis__CL_Product__r.genesis__LOC_Amort_Term__c )+( genesis__Credit_Limit__c*( (genesis__Interest_Rate__c + genesis__CL_Product__r.genesis__Added_Interest__c)/100 ) ) , 12*genesis__Payment_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sensitised Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>