force-app/main/default/objects/genesis__Applications__c/fields/genesis__Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Status__c</fullName>
    <description>This field represents the application status.</description>
    <inlineHelpText>This field represents the application status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW - ENTERED</fullName>
                <default>true</default>
                <label>NEW - ENTERED</label>
            </value>
            <value>
                <fullName>IN – PROGRESS</fullName>
            </value>
            <value>
                <fullName>DOCUMENTS SUBMITTED</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>REFERRED</fullName>
            </value>
            <value>
                <fullName>AWAITING SIGNERS</fullName>
            </value>
            <value>
                <fullName>DECLINED</fullName>
            </value>
            <value>
                <fullName>NOT STARTED</fullName>
            </value>
            <value>
                <fullName>ENTERED</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>NEW - PRICING GENERATED</fullName>
            </value>
            <value>
                <fullName>APPROVED - APPROVED</fullName>
            </value>
            <value>
                <fullName>APPROVED - CONVERTED TO CONTRACT</fullName>
            </value>
            <value>
                <fullName>NEW - IN CREDIT CHECK</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>WITHDRAWN</fullName>
            </value>
            <value>
                <fullName>CREDIT OFFER ACCEPTED</fullName>
            </value>
            <value>
                <fullName>APPROVED - DOCUMENT CHECK</fullName>
            </value>
            <value>
                <fullName>NEW - SCORECARD GENERATED</fullName>
            </value>
            <value>
                <fullName>NEW - CHECKLIST GENERATED</fullName>
            </value>
            <value>
                <fullName>NEW-SUBMITTED</fullName>
            </value>
            <value>
                <fullName>NEW - VEHICLE VALUATION REQUIRED</fullName>
            </value>
            <value>
                <fullName>CLOSING DOCUMENTS GENERATED</fullName>
            </value>
            <value>
                <fullName>PULL CREDIT</fullName>
            </value>
            <value>
                <fullName>NEW - CREDIT PULLED</fullName>
            </value>
            <value>
                <fullName>NEW - IN REVIEW</fullName>
            </value>
            <value>
                <fullName>PROCESSING FUNDING</fullName>
            </value>
            <value>
                <fullName>PROCESSED FUNDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>