force-app/main/default/objects/genesis__Applications__c/fields/genesis__Status_of_Credit_Facility__c.field-meta.xml
<CustomField>
    <fullName>genesis__Status_of_Credit_Facility__c</fullName>
    <description>This field determines the status of credit facility.</description>
    <label>Status of Credit Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>