force-app/main/default/objects/genesis__Applications__c/fields/genesis__Superior_Liens__c.field-meta.xml
<CustomField>
    <fullName>genesis__Superior_Liens__c</fullName>
    <description>This field is used to display the sum of all existing loan amounts associated with the collateral .No same loan amount must be counted twice.</description>
    <inlineHelpText>This field is used to display the sum of all existing loan amounts associated with the collateral .No same loan amount must be counted twice.</inlineHelpText>
    <label>Superior Liens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>