force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Amount_Repaid__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Amount_Repaid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will store the total amount repaid towards all the drawdowns linked to the Parent Application.</description>
    <label>Total Amount Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>