force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Annual_Debt_Service_Sensitised__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Annual_Debt_Service_Sensitised__c</fullName>
    <description>It stores Total Annual Debt Service (Sensitised).</description>
    <label>Total Annual Debt Service (Sensitised)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>