force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Capitalized_Fee__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Capitalized_Fee__c</fullName>
    <description>This field is used to store total capitalized fee.</description>
    <label>Total Capitalized Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>