force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Facility_Variance__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Facility_Variance__c</fullName>
    <description>Difference in loan amount on package application and the total facility amount</description>
    <formula>IF(OR(ISPICKVAL(genesis__Product_Type__c , &apos;LOAN&apos;), ISPICKVAL(genesis__Product_Type__c , &apos;PACKAGE&apos;))
	, IF(ISPICKVAL( genesis__Nature_of_Credit_Facility__c , &apos;Revolving&apos;),
		genesis__Loan_Amount__c  -  genesis__Total_Facility_Amount__c + genesis__Total_Amount_Repaid__c, genesis__Loan_Amount__c  -  genesis__Total_Facility_Amount__c
		),
	IF(
	ISPICKVAL(genesis__Product_Type__c , &apos;LEASE&apos;)
	, IF(ISPICKVAL(genesis__Nature_of_Credit_Facility__c , &apos;Revolving&apos;),
		genesis__Financed_Amount__c  -  genesis__Total_Facility_Amount__c + genesis__Total_Amount_Repaid__c, genesis__Financed_Amount__c  -  genesis__Total_Facility_Amount__c
		), 
	IF(ISPICKVAL(genesis__Nature_of_Credit_Facility__c , &apos;Revolving&apos;),
		genesis__Credit_Limit__c  -  genesis__Total_Facility_Amount__c + genesis__Total_Amount_Repaid__c, genesis__Credit_Limit__c  -  genesis__Total_Facility_Amount__c
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference in loan amount on package application and the total facility amount</inlineHelpText>
    <label>Total Facility Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>