force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Senior_Debt_Annual_Payment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Senior_Debt_Annual_Payment__c</fullName>
    <description>It stores Total Senior Debt (Annual Payment).</description>
    <label>Total Senior Debt (Annual Payment)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>