force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Senior_Debt_Sensitised__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Senior_Debt_Sensitised__c</fullName>
    <description>It stores Total Senior Debt (Sensitised).</description>
    <label>Total Senior Debt (Sensitised)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>