force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Charged_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Charged_Fee_Description__c</fullName>
    <description>This pertains to the fee chargeable to the Borrower or Customer for whom the Letter of Credit was established. This may be charged in addition to the commission charged by the Lender in relation to the Letter of Credit.</description>
    <inlineHelpText>This pertains to the fee chargeable to the Borrower or Customer for whom the Letter of Credit was established. This may be charged in addition to the commission charged by the Lender in relation to the Letter of Credit.</inlineHelpText>
    <label>Charged Fee Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>