force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Commission_Description__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Commission_Description__c</fullName>
    <description>This pertains to the commission chargeable to the Borrower or Customer for whom the Letter of Credit was established. The Commission could be stated as a percentage of an agreed base or as a fixed amount (the &quot;$&quot; sign should be included if this field will contain a fixed dollar amount).</description>
    <inlineHelpText>This pertains to the commission chargeable to the Borrower or Customer for whom the Letter of Credit was established.</inlineHelpText>
    <label>Commission Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>