force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Envelope_Id__c</fullName>
    <description>Specifies Envelope Id for eSignature.</description>
    <inlineHelpText>Specifies Envelope Id for eSignature.</inlineHelpText>
    <label>Envelope Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>