force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Is_Closing_Documents_Signed__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Is_Closing_Documents_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies the eSignature on the documents has been completed.</description>
    <inlineHelpText>Specifies the eSignature on the documents has been completed.</inlineHelpText>
    <label>Is Closing Documents Signed</label>
    <type>Checkbox</type>
</CustomField>