force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Additional_Provisions__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Additional_Provisions__c</fullName>
    <description>These are provisions that are required under the Letter of Credit that were not covered or addressed in any of the standard terms and conditions cited on the agreement.</description>
    <inlineHelpText>These are provisions that are required under the Letter of Credit that were not covered or addressed in any of the standard terms and conditions cited on the agreement.</inlineHelpText>
    <label>Letter of Credit Additional Provisions</label>
    <type>TextArea</type>
</CustomField>