force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Credit_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Credit_Transfer_Type__c</fullName>
    <description>This pertains to the frequency of transfer permitted under the Letter of Credit. The Letter of Credit may have the following options: 0) Not transferable; 1) Transferable only once and only in its entirety to a transferee of the Note (Single Transfer) ; and 2) Transfer may be more than once but only in its entirety to a transferee of the Note (Multiple transfer).</description>
    <inlineHelpText>This pertains to the frequency of transfer permitted under the Letter of Credit.</inlineHelpText>
    <label>Credit Transfer Type for LC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Transferable</fullName>
            </value>
            <value>
                <fullName>Single Transfer</fullName>
            </value>
            <value>
                <fullName>Multiple Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>