force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Credit_Type__c</fullName>
    <description>This refers to the type of credit availability under the Letter of Credit established in behalf of the Borrower or Customer. Credit may be made available to the beneficiary upon presentation of a: 1) Sight Draft which requires the Issuing Bank or Lender to pay the Beneficiary upon presentation of draft and required documents;  2) Time Draft which requires the Issuing Bank or Lender to pay the Beneficiary at a future date following presentation of draft and required documents; and 3) Other Lender/Issuing Bank specific credit availability for the Letter of Credit (freeform)</description>
    <inlineHelpText>This refers to the type of credit availability under the Letter of Credit established in behalf of the Borrower or Customer.</inlineHelpText>
    <label>Credit Type for Letter of Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sight Draft</fullName>
            </value>
            <value>
                <fullName>Time Draft</fullName>
            </value>
            <value>
                <fullName>Other Lender specific Draft Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>