force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Credit_Type_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Credit_Type_Other_Description__c</fullName>
    <description>This pertains to a Lender (Issuing) Bank specific credit availability allowed under the Letter of Credit terms and will be applied if a sight draft or time draft is not applicable.</description>
    <inlineHelpText>This pertains to a Lender (Issuing) Bank specific credit availability allowed under the Letter of Credit terms.</inlineHelpText>
    <label>LC:Other Credit Type Description</label>
    <type>TextArea</type>
</CustomField>