force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Draw_Conditions__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Draw_Conditions__c</fullName>
    <description>This pertains to the conditions that must be met before any draw could be made from the Letter of Credit.</description>
    <inlineHelpText>This pertains to the conditions that must be met before any draw could be made from the Letter of Credit.</inlineHelpText>
    <label>Letter of Credit Draw Conditions</label>
    <type>TextArea</type>
</CustomField>