force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Draws_Permitted__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Draws_Permitted__c</fullName>
    <description>This pertains to the number of draws and draw amounts allowed under the Letter of Credit.</description>
    <inlineHelpText>This pertains to the number of draws and draw amounts allowed under the Letter of Credit.</inlineHelpText>
    <label>Number of Draws Permitted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>