force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Receiving_Bank__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Receiving_Bank__c</fullName>
    <description>This is the bank that  will be receiving the documents required in Letter of Credit. The receiving or accepting bank could either be the: 1) Issuing Bank; 2) Confirming Bank; or 3) Advising Bank, defined under the Letter of Credit Agreement.</description>
    <inlineHelpText>This is the bank that  will be receiving the documents required in Letter of Credit. The receiving or accepting bank could either be the: 1) Issuing Bank; 2) Confirming Bank; or 3) Advising Bank, defined under the Letter of Credit Agreement.</inlineHelpText>
    <label>Letter of Credit Receiving Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issuing Bank</fullName>
            </value>
            <value>
                <fullName>Advising Bank</fullName>
            </value>
            <value>
                <fullName>Confirming Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>