force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Renewal_Number__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Renewal_Number__c</fullName>
    <description>This is  the renewal number associated with the Letter of Credit Application and Agreement.</description>
    <inlineHelpText>This is  the renewal number associated with the Letter of Credit Application and Agreement.</inlineHelpText>
    <label>Letter of Credit Renewal Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>