force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Required_Documents__c</fullName>
    <description>This pertains to the documents that must be presented before payment is made to a Letter of Credit beneficiary.</description>
    <inlineHelpText>Documents that must be presented before payment is made to a Letter of Credit beneficiary.</inlineHelpText>
    <label>Letter of Credit Required Documents</label>
    <type>TextArea</type>
</CustomField>