force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Type__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Type__c</fullName>
    <description>This is the type of Letter of Credit being issued by the Bank to the Applicant. Each type can be combined with the exception of: a) a revocable and irrevocable credit; and b) a reducing  vs. a revolving letter of credit.</description>
    <inlineHelpText>This is the type of Letter of Credit being issued by the Bank to the Applicant. Each type can be combined with the exception of: a) a revocable and irrevocable credit; and b) a reducing  vs. a revolving letter of credit.</inlineHelpText>
    <label>Letter of Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revocable</fullName>
            </value>
            <value>
                <fullName>Irrevocable</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Reducing</fullName>
            </value>
            <value>
                <fullName>Revolving</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>