force-app/main/default/objects/genesis__Applications__c/fields/intadapter__LC_Type_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>intadapter__LC_Type_Other_Description__c</fullName>
    <description>This is a specific documentation requirement (typically non-good related) for the Letter of Credit. This is typically used in a Stand by Letter of Credit where goods are not involved and specific documentation are required based on an occurrence of an event.</description>
    <inlineHelpText>This is a specific documentation requirement (typically non-good related) for the Letter of Credit.</inlineHelpText>
    <label>Letter of Credit:Other Type Description</label>
    <type>TextArea</type>
</CustomField>