force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Number_Of_Document_Copies__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Number_Of_Document_Copies__c</fullName>
    <description>This pertains to the number of copies of required documents that are to be submitted to any of the following: Issuing Bank, Advising Bank, or Confirming Bank.</description>
    <inlineHelpText>This pertains to the number of copies of required documents that are to be submitted to any of the following: Issuing Bank, Advising Bank, or Confirming Bank.</inlineHelpText>
    <label>Number of Document Copies</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>