force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Purchase_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Purchase_Contract_Date__c</fullName>
    <description>This is the date on which the purchase contract was signed by the Seller (Beneficiary) and Buyer (Borrower) involved under the Letter of Credit.</description>
    <inlineHelpText>This is the date on which the purchase contract was signed by the Seller (Beneficiary) and Buyer (Borrower) involved under the Letter of Credit.</inlineHelpText>
    <label>Purchase Contract Date</label>
    <type>Date</type>
</CustomField>