force-app/main/default/objects/genesis__Applications__c/fields/intadapter__Required_Days_Before_Payment__c.field-meta.xml
<CustomField>
    <fullName>intadapter__Required_Days_Before_Payment__c</fullName>
    <description>This is the required number of days to lapse before a draft will be paid to the Beneficiary under the Letter of Credit.</description>
    <inlineHelpText>This is the required number of days to lapse before a draft will be paid to the Beneficiary under the Letter of Credit.</inlineHelpText>
    <label>Required number of days before payment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>