force-app/main/default/objects/genesis__Applications__c/fields/oao__Access_to_ATM_cash__c.field-meta.xml
<CustomField>
    <fullName>oao__Access_to_ATM_cash__c</fullName>
    <description>Field to specify if ATM cash is accessible or not.</description>
    <inlineHelpText>Field to specify if ATM cash is accessible or not.</inlineHelpText>
    <label>Access to ATM cash</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>