force-app/main/default/objects/genesis__Applications__c/fields/oao__Account_Used_For__c.field-meta.xml
<CustomField>
    <fullName>oao__Account_Used_For__c</fullName>
    <description>The Business Account will be used for what purpose.</description>
    <inlineHelpText>The Business Account will be used for what purpose.</inlineHelpText>
    <label>Account Used For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General operating funds</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Credit card processing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>