force-app/main/default/objects/genesis__Applications__c/fields/oao__ACH_Electronic_Transfers_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>oao__ACH_Electronic_Transfers_Sent_To__c</fullName>
    <description>To which countries do you expect these ACH Electronic Transfers will be sent?</description>
    <label>ACH Electronic Transfers Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>