force-app/main/default/objects/genesis__Applications__c/fields/oao__ACH_Transfers_from_Non_US_Location__c.field-meta.xml
<CustomField>
    <fullName>oao__ACH_Transfers_from_Non_US_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ACH Transfers from Non-US Location</description>
    <label>ACH Transfers from Non-US Location</label>
    <type>Checkbox</type>
</CustomField>