force-app/main/default/objects/genesis__Applications__c/fields/oao__ACH_Transfers_Received_From__c.field-meta.xml
<CustomField>
    <fullName>oao__ACH_Transfers_Received_From__c</fullName>
    <description>ACH Transfers Received From</description>
    <label>ACH Transfers Received From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>