force-app/main/default/objects/genesis__Applications__c/fields/oao__Adverse_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>oao__Adverse_Action_Notification__c</fullName>
    <description>This field capture the comment for adverse action</description>
    <label>Adverse Action Notification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>