force-app/main/default/objects/genesis__Applications__c/fields/oao__Application_Referred_Due_to_Compliance__c.field-meta.xml
<CustomField>
    <fullName>oao__Application_Referred_Due_to_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the application is referred when the Compliance is violated</description>
    <inlineHelpText>When the application is referred when the Compliance is violated</inlineHelpText>
    <label>Application Referred Due to Compliance</label>
    <type>Checkbox</type>
</CustomField>