force-app/main/default/objects/genesis__Applications__c/fields/oao__Application_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>oao__Application_Timestamp__c</fullName>
    <description>The date and time in which the application was created</description>
    <label>Application Timestamp</label>
    <type>DateTime</type>
</CustomField>