force-app/main/default/objects/genesis__Applications__c/fields/oao__APY__c.field-meta.xml
<CustomField>
    <fullName>oao__APY__c</fullName>
    <description>Annual percentage yield for preparation for CDs (value from Core).</description>
    <inlineHelpText>Annual percentage yield for preparation for CDs (value from Core).</inlineHelpText>
    <label>APY</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>