force-app/main/default/objects/genesis__Applications__c/fields/oao__ATM_Deposits__c.field-meta.xml
<CustomField>
    <fullName>oao__ATM_Deposits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ATM Deposits</description>
    <label>ATM Deposits</label>
    <type>Checkbox</type>
</CustomField>