force-app/main/default/objects/genesis__Applications__c/fields/oao__ATM_related_business__c.field-meta.xml
<CustomField>
    <fullName>oao__ATM_related_business__c</fullName>
    <description>Field to specify if the Business is ATM related or not.</description>
    <inlineHelpText>Field to specify if the Business is ATM related or not.</inlineHelpText>
    <label>ATM related business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>