force-app/main/default/objects/genesis__Applications__c/fields/oao__ATM_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>oao__ATM_Withdrawals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ATM Withdrawals</description>
    <label>ATM Withdrawals</label>
    <type>Checkbox</type>
</CustomField>