force-app/main/default/objects/genesis__Applications__c/fields/oao__Backup_Withholding__c.field-meta.xml
<CustomField>
    <fullName>oao__Backup_Withholding__c</fullName>
    <description>This is the field that is updated when the user gives the Backup Withholding consent.</description>
    <inlineHelpText>This is the field that is updated when the user gives the Backup Withholding consent.</inlineHelpText>
    <label>Backup Withholding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>